gitops/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  namespace: mlflow
spec:
  replicas: 1
  selector:
    matchLabels: { app: mlflow-server }
  template:
    metadata:
      labels: { app: mlflow-server }
    spec:
      serviceAccountName: mlflow-sa
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v2.16.0
          command: ["/bin/bash", "-c"]
          args:
            - |
              pip install --no-cache-dir psycopg2-binary boto3 && \
              mlflow server \
                --backend-store-uri="postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_ENDPOINT}:5432/${DB_NAME}" \
                --default-artifact-root=s3://sandbox-eks-mlflow-artifacts/ \
                --host=0.0.0.0 \
                --port=5000
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: mlflow-db-secret-provider
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
  namespace: mlflow
spec:
  selector: { app: mlflow-server }
  ports: [{ port: 5000, targetPort: 5000 }]
